[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "spotyt"
authors = [
    {name = "Daniel A. Vasquez", email = "d@nielvas.co"},
]
description = "Download songs from Spotify playlists via Youtube Music"
readme = "README.md"
requires-python = ">=3.10"
keywords = ["spotify", "youtube", "mp3"]
license = {text = "MIT"}
classifiers = [
    "Topic :: Multimedia :: Sound/Audio :: Conversion",
]
dependencies = [
  "fastapi == 0.92.0",
  "jinja2 == 3.1.2",
  "python-dotenv == 1.0.0",
  "spotipy == 2.22.1",
  "uvicorn[standard] == 0.20.0",
  "uvloop == 0.17.0",
  "ytmusicapi == 0.25.0",
  "youtube-dl == 2021.12.17",
]
dynamic =["version" ]

[tool.setuptools.dynamic]
version = {attr = "spotyt.__version__"}

[project.optional-dependencies]
dev = [
    "black >= 23.1.0",
]

[tool.black]
line-length = 88
target_version = ['py310']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.venv
    | _build
    | build
    | dist
  )/
)
'''