[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "spotyt"
authors = [
    {name = "Daniel A. Vasquez", email = "d@nielvas.co"},
]
description = "Download songs from Spotify playlists via Youtube Music"
readme = "README.md"
requires-python = ">=3.10"
keywords = ["spotify", "youtube", "mp3"]
license = {text = "MIT"}
classifiers = [
    "Topic :: Multimedia :: Sound/Audio :: Conversion",
]
dynamic =["version", "dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
version = {attr = "spotyt.__version__"}

[project.optional-dependencies]
dev = [
    "black >= 23.1.0",
]

[tool.black]
line-length = 88
target_version = ['py310']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.venv
    | _build
    | build
    | dist
  )/
)
'''